# meminsight

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile.am  NOTICE  README.md  SRS_meminsight_rdk_fragmentation.md  TODO.md  configure.ac  cov_build.sh  memstatus.c  memstatus.h  run_ut.sh  safe_run_xmem.sh
.github/: AGENTS_AND_SKILLS_USAGE.md  copilot-instructions.md
.github/agents/: README.md  meminsight-implementer.agent.md  meminsight-reviewer.agent.md
.github/instructions/: README.md  build-and-ci.instructions.md  c-implementation.instructions.md
.github/prompts/: README.md  openspec-source-of-truth.prompt.md
.github/skills/: README.md
.github/skills/diagnose/: SKILL.md
.github/skills/grill-with-docs-openspec/: SKILL.md
.github/skills/openspec-source-of-truth/: SKILL.md
.github/skills/proc-fragmentation-compat/: SKILL.md
.github/skills/report-schema-compat/: SKILL.md
.github/skills/tdd/: SKILL.md
.github/skills/to-issues-openspec/: SKILL.md
.github/skills/zoom-out/: SKILL.md
.github/workflows/: build_and_test.yml  component_auto_release.yml  native_full_build.yml  unit-test.yml
deploy/systemd/: meminsight.service
deploy/yocto/: meminsight.bb
docs/: OPENSPEC_USAGE_GUIDE.md  README.md  ROLE_BASED_WORKFLOW_GUIDE.md
openspec/: README.md  config.yaml
openspec/architecture/: 00-baseline-architecture.md  01-openspec-adoption-workflow.md  README.md
openspec/changes/: README.md
openspec/specs/: 00-capability-index.md  01-cli-and-execution-modes.md  02-output-directory-and-run-lifecycle.md  03-config-mode-and-whitelist-capture.md  04-process-discovery-and-filtering.md  05-smaps-and-smaps-rollup-parsing.md  06-meminfo-collection.md  07-fragmentation-collection.md  08-ddr-bandwidth-collection.md  09-csv-report-output.md  10-json-report-output-optional.md  11-upload-and-state-files.md  12-testme-fixture-mode.md  13-implementation-parity-matrix.md  README.md
ref/: MEMINSIGHT_RDK_UPLOAD_FLOW.md
scripts/: README.md  build_memleak.sh  detect_leak.sh  run_ut.sh
src/: meminsight.c  meminsight.h  memstatus.c  memstatus.h
test/: run_ut.sh
test/1-non-zero-swap-entry/: meminsight_testSmap.txt
test/3-empty-swap-entry/: meminsight_testMeminfo.txt  meminsight_testSmap.txt
test/6-buddyinfo-sample/: meminsight_testBuddyinfo.txt
test/7-pagetypeinfo-sample/: meminsight_testPagetypeinfo.txt
test/8-buddyinfo-variant-kernel/: meminsight_testBuddyinfo.txt
test/9-pagetypeinfo-variant-layout/: meminsight_testPagetypeinfo.txt
tst/: meminsight_testSmap2.txt  meminsight_testSmapNoSwap.txt
tst/1-non-zero-swap-entry/: meminsight_testMeminfo.txt
tst/4-negative-duplicate-meminfo-field/: meminsight_testMeminfo.txt
tst/5-negative-duplicate-smaps-field/: meminsight_testSmap.txt
